# genai-projects

./: .gitignore  genai-datatypes.md  microservice-README.md  prompt-engineering.md  requirements.txt
aws/: aws-services-cheatsheet.md  debugging-aws.md
content/: destination.txt  generate_sample.py
data-visualization/: matplotlib.ipynb
genai/: research-rag.ipynb
genai-notes/: prompt-engineering-cheatsheet.md
interview-prep/: leadership-principles.md  make_intro_ppt.py  tell-me-about-yourself.pptx
js/: blockThread.js  callback.js  callbackHell.js  classes.js  closure.js  eventloop.js  functions.js  hiherOrderFunctions.js  hoisitng.js  http-status-codes.md  index.html  js-examples.js  js-interview-prep.md  js-tier1-tier2-qa.md  jsEngineArchitect.js  map-playground.js  map-vs-object.js  min-heap.js  practise.js  promises.js  prototype.js  scope.js  temporal-deadzone.js  this.js  treesPractice.js  undefined.js
js-dsa/: AWS_SERVICES.md  DB_BOTTLENECKS_REPLICATION.md  STUDY_GUIDE.md  THEORY_QA.md  dsa.js
langchainupdated/: promptengineering.py  pyproject.toml
langchainupdated/langchain-projects/QA-Chatbot/: app.py
langchainupdated/langchain-projects/RAG-Document-Q&A/: app.py
langchainupdated/langchain-projects/RAG-QA-Conversational/: app.py  requirements.txt
langchainupdated/langchain-projects/Search-Engine/: app.py  requirements.txt  tools_agents.ipynb
langchainupdated/updatedlanchain/: lanchainintro.ipynb  messages.ipynb  middleware.ipynb  modelintegration.ipynb  structuredoutput.ipynb  tools.ipynb
python/: des.txt  example.csv  lambda.ipynb  (+1 more)
(+27 files in other folders)
